--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,22 +6,22 @@
   h1 {
     @apply text-4xl;
     @apply mt-8;
-    @apply mb-1;
+    @apply mb-2;
   }
   h2 {
     @apply text-3xl;
     @apply mt-6;
-    @apply mb-px;
+    margin-bottom: 6px;
   }
   h3 {
     @apply text-2xl;
     @apply mt-4;
-    @apply mb-px;
+    @apply mb-1;
   }
   h4 {
     @apply text-xl;
     @apply mt-2;
-    @apply mb-px;
+    margin-bottom: 2px;
   }
   h5 {
     @apply text-lg;
