--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,11 +1,3 @@
-:root {
-  --grid-pattern-bg-color: rgba(159,219,252,.2);
-}
-
-html.dark {
-  --grid-pattern-bg-color: rgba(159,219,252,.05);
-}
-
 html {
   overflow-x: hidden;
 }
@@ -33,11 +25,11 @@ html.dark {
 }
 
 ::-moz-selection {
-  background: #8af8;
+  background: hsla(222, 100%, 78%, 0.5);
 }
 
 ::selection {
-  background: #8af8;
+  background: hsla(222, 100%, 78%, 0.5);
 }
 
 svg {
@@ -55,10 +47,18 @@ svg {
   pointer-events: none;
 }
 
+:root {
+  --grid-pattern-bg-color: rgba(159,219,252,.2);
+}
+
+html.dark {
+  --grid-pattern-bg-color: rgba(159,219,252,.035);
+}
+
 .grid-pattern-bg {
   background-image:
     linear-gradient(90deg, var(--grid-pattern-bg-color) 3%, transparent 0),
     linear-gradient(1turn, var(--grid-pattern-bg-color) 3%, transparent 0);
-  background-size: 20px 20px;
+  background-size: 14px 14px;
   background-position: 50%;
 }
