--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -52,7 +52,8 @@ html.dark > body {
 }
 
 /* scrollbar */
-::-webkit-scrollbar {
+/* 暫時不採用 #COM0809 */
+/* ::-webkit-scrollbar {
   height: 10px;
   width: 10px;
 }
@@ -67,7 +68,7 @@ html.dark > body {
 }
 ::-webkit-scrollbar-thumb:hover {
   background: hsl(207, 6%, 39%);
-}
+} */
 
 ::-moz-selection {
   background: hsla(222, 100%, 78%, 0.5);
