--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -71,11 +71,11 @@ html.dark > body {
 } */
 
 ::-moz-selection {
-  background: hsla(222, 100%, 78%, 0.5);
+  background: hsla(222, 100%, 78%, 0.35);
 }
 
 ::selection {
-  background: hsla(222, 100%, 78%, 0.5);
+  background: hsla(222, 100%, 78%, 0.35);
 }
 
 svg {
@@ -106,6 +106,7 @@ html.dark {
     linear-gradient(90deg, var(--grid-pattern-bg-color) 3%, transparent 0),
     linear-gradient(1turn, var(--grid-pattern-bg-color) 3%, transparent 0);
   background-size: 14px 14px;
+  /* background-size: 20px 20px; */
   background-position: 50%;
 }
 
